--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
                     <img src="images/bikash.jpg" alt="Bikash Malla" class="profile-image">
                 </div>
                 <div class="about-text">
-                    <p>I'm Bikash Malla, a Computer Engineering student at the Institute of Engineering, Tribhuvan University. I enjoy building systems that improve lives and make information more accessible.</p>
-                            <p>Whether it's writing efficient code, designing scalable networks, or automating everyday tasks, I find joy in exploring the intersection of hardware and software to bring meaningful solutions to life.</p>
+                    <p>I'm Bikash Malla, a Computer Engineering student at Minnesota State University, Mankato, USA. I enjoy building systems that improve lives and make information more accessible.</p>
+                    <p>Whether it's writing efficient code, designing scalable networks, or automating everyday tasks, I find joy in exploring the intersection of hardware and software to bring meaningful solutions to life.</p>
                     <div class="button-group">
-                        <a class="btn btn-outline-primary" href="#" target="_blank">Open Resume</a>
+                        <a class="btn btn-outline-primary" href="#">Open Resume</a>
 
                     </div>
                 </div>
